# texpro

./: .gitignore  README.md  pyproject.toml  recommended_packages.txt  test.py
docs/: conf.py  index.md
docs/example/: texpro_demo.ipynb  texpro_demo.tex
example/: texpro_demo.ipynb
example/texpro_demo/: texpro_demo.tex
tests/: settings_test.py  test_settings.py  test_texassets.py  texassets_test.py
texpro/: __init__.py  settings.py  texassets.py  utils.py
